[tool.poetry]
name = "metmuseum-api-tests"
version = "0.1.0"
description = ""
authors = ["The <153374892+thedogthe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.11.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"